--- a/src/Assets/Styles/Index.css
+++ b/src/Assets/Styles/Index.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #FF2625;
+    color: #aaa;
     font-size: 25px;
     border-radius: 4px;
     position: absolute;
@@ -69,7 +69,7 @@ body {
     width: 400px;
     height: 445px;
     background: #fff;
-    border-top: 4px solid #FF2625;
+    border-top: 4px solid #aaa;
     border-bottom-left-radius: 20px;
     text-decoration: none;
     display: flex;
@@ -95,8 +95,8 @@ body {
 }
 
 .search-btn:hover {
-    color: #FF2625 !important;
-    border: 1px solid #FF2625 !important;
+    color: #aaa !important;
+    border: 1px solid #aaa !important;
 }
 
 .exercise-video {
